Update language file: ga

--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,13 +1,39 @@
 {
-  "title": "Cé na tíortha san AE a thairgeann na hionchais fostaíochta is fearr?",
-  "subtitle": "Meastar gur 5.6% an fás fostaíochta amach anseo sna tíortha seo in 2022-2035.",
+  "title": "Cé chomh coitianta is atá coireanna a bhaineann le drugaí san AE?",
+  "subtitle": "Sa bhliain 2023, bhí thart ar 1.18 milliún saoránach den AE páirteach i ngníomhaíochtaí mídhleathacha a bhain le drugaí a raibh réamhtheachtaithe i gceist leo.",
   "textNoteDescription": "Nóta",
-  "textNote": "sdchdc",
+  "textNote": "Líon iomlán na gcionta gníomhartha neamhdhleathacha a bhaineann le drugaí rialaithe nó réamhtheachtaithe arna dtaifeadadh ag na póilíní. Léiríonn tuairiscí ar chionta i gcoinne reachtaíocht náisiúnta drugaí (úsáid, seilbh, gáinneáil, srl.) difríochtaí sa dlí ach freisin na bealaí éagsúla ina gcuirtear an dlí i bhfeidhm agus ina gcuirtear i bhfeidhm é, agus na tosaíochtaí agus na hacmhainní a leithdháiltear do fhadhbanna sonracha ag gníomhaireachtaí ceartais choiriúil.",
   "textSourceDescription": "Foinse",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Faigh rochtain ar na sonraí",
-  "extraInfo_DE": "Luathaíonn an Ghearmáin Rolladh Amach Fuinnimh In-athnuaite, Dírítear 80% ar Chumhacht Ghlan faoi 2030",
-  "extraInfo_FR": "Formheasann Parlaimint na Fraince Bille um Athchóiriú an Mhór-Imirce i measc Agóidí ar fud na tíre",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Rochtain ar na sonraí",
+  "extraInfo_AT": "Líon iomlán: 35737",
+  "extraInfo_BE": "Líon iomlán: 58915",
+  "extraInfo_BG": "Líon iomlán: 5691",
+  "extraInfo_CY": "Líon iomlán: 1094",
+  "extraInfo_CZ": "Líon iomlán: 4328",
+  "extraInfo_DE": "Líon iomlán: 346877",
+  "extraInfo_DK": "Líon iomlán: 29934",
+  "extraInfo_EE": "Líon iomlán: 3297",
+  "extraInfo_EL": "Líon iomlán: 12713",
+  "extraInfo_ES": "Líon iomlán: 21033",
+  "extraInfo_FI": "Líon iomlán: 26784",
+  "extraInfo_FR": "Líon iomlán: 346628",
+  "extraInfo_HR": "Líon iomlán: 10356",
+  "extraInfo_HU": "Líon iomlán: 6589",
+  "extraInfo_IE": "Líon iomlán: 16699",
+  "extraInfo_IT": "Líon iomlán: 30365",
+  "extraInfo_LT": "Líon iomlán: 3811",
+  "extraInfo_LU": "Líon iomlán: 3129",
+  "extraInfo_LV": "Líon iomlán: 1350",
+  "extraInfo_MT": "Líon iomlán: 200",
+  "extraInfo_NL": "Líon iomlán: 13580",
+  "extraInfo_PL": "Líon iomlán: 67346",
+  "extraInfo_PT": "Líon iomlán: 7661",
+  "extraInfo_RO": "Líon iomlán: 12775",
+  "extraInfo_SE": "Líon iomlán: 115164",
+  "extraInfo_SI": "Líon iomlán: 1294",
+  "extraInfo_SK": "Líon iomlán: 1361",
   "legend1": "Níl aon sonraí ar fáil",
+  "customUnitLabel": "in aghaidh gach céad míle áitritheoir",
   "tooltipExtraInfoLabel": "Cliceáil anseo"
 }
