Update language file: pt

--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,13 +1,39 @@
 {
-  "title": "Quais países da UE oferecem as melhores perspectivas de emprego?",
-  "subtitle": "O crescimento futuro do emprego nesses países entre 2022 e 2035 é estimado em 5,6%.",
+  "title": "Quão comuns são os crimes relacionados com drogas na UE?",
+  "subtitle": "Em 2023, cerca de 1,18 milhão de cidadãos da UE estiveram envolvidos em atividades ilegais relacionadas com drogas precursoras.",
   "textNoteDescription": "Observação",
-  "textNote": "SDCHDC",
+  "textNote": "Número total de ocorrências policiais de atos ilícitos envolvendo drogas controladas ou precursores. Os registros de infrações à legislação nacional sobre drogas (uso, posse, tráfico, etc.) refletem diferenças na legislação, mas também as diferentes formas de aplicação e execução da lei, bem como as prioridades e os recursos alocados a problemas específicos pelas agências de justiça criminal.",
   "textSourceDescription": "Fonte",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Acesse os dados",
-  "extraInfo_DE": "Alemanha acelera implementação de energia renovável e tem como meta 80% de energia limpa até 2030",
-  "extraInfo_FR": "Parlamento francês aprova importante projeto de lei de reforma da imigração em meio a protestos em todo o país",
-  "legend1": "Não há dados disponíveis",
+  "extraInfo_AT": "Número total: 35737",
+  "extraInfo_BE": "Número total: 58915",
+  "extraInfo_BG": "Número total: 5691",
+  "extraInfo_CY": "Número total: 1094",
+  "extraInfo_CZ": "Número total: 4328",
+  "extraInfo_DE": "Número total: 346877",
+  "extraInfo_DK": "Número total: 29934",
+  "extraInfo_EE": "Número total: 3297",
+  "extraInfo_EL": "Número total: 12713",
+  "extraInfo_ES": "Número total: 21033",
+  "extraInfo_FI": "Número total: 26784",
+  "extraInfo_FR": "Número total: 346628",
+  "extraInfo_HR": "Número total: 10356",
+  "extraInfo_HU": "Número total: 6589",
+  "extraInfo_IE": "Número total: 16699",
+  "extraInfo_IT": "Número total: 30365",
+  "extraInfo_LT": "Número total: 3811",
+  "extraInfo_LU": "Número total: 3129",
+  "extraInfo_LV": "Número total: 1350",
+  "extraInfo_MT": "Número total: 200",
+  "extraInfo_NL": "Número total: 13580",
+  "extraInfo_PL": "Número total: 67346",
+  "extraInfo_PT": "Número total: 7661",
+  "extraInfo_RO": "Número total: 12775",
+  "extraInfo_SE": "Número total: 115164",
+  "extraInfo_SI": "Número total: 1294",
+  "extraInfo_SK": "Número total: 1361",
+  "legend1": "Não há dados disponíveis.",
+  "customUnitLabel": "por cem mil habitantes",
   "tooltipExtraInfoLabel": "Clique aqui"
 }
