Update language file: pl

--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -1,13 +1,39 @@
 {
-  "title": "Które kraje UE oferują najlepsze perspektywy zatrudnienia?",
-  "subtitle": "Szacuje się, że przyszły wzrost zatrudnienia w tych krajach w latach 2022–2035 wyniesie 5,6%.",
+  "title": "Jak powszechne są przestępstwa związane z narkotykami w UE?",
+  "subtitle": "W 2023 r. około 1,18 mln obywateli UE było zaangażowanych w nielegalną działalność narkotykową z wykorzystaniem prekursorów.",
   "textNoteDescription": "Notatka",
-  "textNote": "sdchdc",
+  "textNote": "Całkowita liczba przestępstw z udziałem narkotyków kontrolowanych lub ich prekursorów odnotowanych przez policję. Zgłoszenia dotyczące przestępstw przeciwko krajowemu ustawodawstwu narkotykowemu (używanie, posiadanie, handel itp.) odzwierciedlają różnice w prawie, ale także różne sposoby jego egzekwowania i stosowania, a także priorytety i zasoby przeznaczane na konkretne problemy przez organy wymiaru sprawiedliwości.",
   "textSourceDescription": "Źródło",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Uzyskaj dostęp do danych",
-  "extraInfo_DE": "Niemcy przyspieszają wdrażanie energii odnawialnej, dążąc do 80% czystej energii do 2030 r.",
-  "extraInfo_FR": "Parlament francuski zatwierdza projekt ustawy o dużej reformie imigracyjnej w obliczu ogólnokrajowych protestów",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Dostęp do danych",
+  "extraInfo_AT": "Łączna liczba: 35737",
+  "extraInfo_BE": "Łączna liczba: 58915",
+  "extraInfo_BG": "Łączna liczba: 5691",
+  "extraInfo_CY": "Łączna liczba: 1094",
+  "extraInfo_CZ": "Łączna liczba: 4328",
+  "extraInfo_DE": "Łączna liczba: 346877",
+  "extraInfo_DK": "Łączna liczba: 29934",
+  "extraInfo_EE": "Łączna liczba: 3297",
+  "extraInfo_EL": "Łączna liczba: 12713",
+  "extraInfo_ES": "Łączna liczba: 21033",
+  "extraInfo_FI": "Łączna liczba: 26784",
+  "extraInfo_FR": "Łączna liczba: 346628",
+  "extraInfo_HR": "Łączna liczba: 10356",
+  "extraInfo_HU": "Łączna liczba: 6589",
+  "extraInfo_IE": "Łączna liczba: 16699",
+  "extraInfo_IT": "Łączna liczba: 30365",
+  "extraInfo_LT": "Łączna liczba: 3811",
+  "extraInfo_LU": "Łączna liczba: 3129",
+  "extraInfo_LV": "Łączna liczba: 1350",
+  "extraInfo_MT": "Łączna liczba: 200",
+  "extraInfo_NL": "Łączna liczba: 13580",
+  "extraInfo_PL": "Łączna liczba: 67346",
+  "extraInfo_PT": "Łączna liczba: 7661",
+  "extraInfo_RO": "Łączna liczba: 12775",
+  "extraInfo_SE": "Łączna liczba: 115164",
+  "extraInfo_SI": "Łączna liczba: 1294",
+  "extraInfo_SK": "Łączna liczba: 1361",
   "legend1": "Brak dostępnych danych",
+  "customUnitLabel": "na sto tysięcy mieszkańców",
   "tooltipExtraInfoLabel": "Kliknij tutaj"
 }
