Update language file: es

--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,13 +1,39 @@
 {
-  "title": "¿Qué países de la UE ofrecen las mejores perspectivas de empleo?",
-  "subtitle": "Se estima que el crecimiento futuro del empleo en estos países en el período 2022-2035 será del 5,6%.",
+  "title": "¿Con qué frecuencia se producen delitos relacionados con las drogas en la UE?",
+  "subtitle": "En 2023, alrededor de 1,18 millones de ciudadanos de la UE estuvieron involucrados en actividades ilegales relacionadas con drogas que involucraban precursores.",
   "textNoteDescription": "Nota",
-  "textNote": "sdchdc",
+  "textNote": "Número total de delitos registrados por la policía relacionados con drogas controladas o precursores. Los informes de delitos contra la legislación nacional sobre drogas (uso, posesión, tráfico, etc.) reflejan las diferencias en la legislación, así como las distintas formas en que se aplica y se hace cumplir la ley, y las prioridades y los recursos que los organismos de justicia penal destinan a problemas específicos.",
   "textSourceDescription": "Fuente",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Acceder a los datos",
-  "extraInfo_DE": "Alemania acelera el despliegue de energía renovable y aspira a que el 80 % de su energía sea limpia en 2030",
-  "extraInfo_FR": "El Parlamento francés aprueba un importante proyecto de ley de reforma migratoria en medio de protestas a nivel nacional",
-  "legend1": "No hay datos disponibles",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Acceda a los datos",
+  "extraInfo_AT": "Número total: 35737",
+  "extraInfo_BE": "Número total: 58915",
+  "extraInfo_BG": "Número total: 5691",
+  "extraInfo_CY": "Número total: 1094",
+  "extraInfo_CZ": "Número total: 4328",
+  "extraInfo_DE": "Número total: 346877",
+  "extraInfo_DK": "Número total: 29934",
+  "extraInfo_EE": "Número total: 3297",
+  "extraInfo_EL": "Número total: 12713",
+  "extraInfo_ES": "Número total: 21033",
+  "extraInfo_FI": "Número total: 26784",
+  "extraInfo_FR": "Número total: 346628",
+  "extraInfo_HR": "Número total: 10356",
+  "extraInfo_HU": "Número total: 6589",
+  "extraInfo_IE": "Número total: 16699",
+  "extraInfo_IT": "Número total: 30365",
+  "extraInfo_LT": "Número total: 3811",
+  "extraInfo_LU": "Número total: 3129",
+  "extraInfo_LV": "Número total: 1350",
+  "extraInfo_MT": "Número total: 200",
+  "extraInfo_NL": "Número total: 13580",
+  "extraInfo_PL": "Número total: 67346",
+  "extraInfo_PT": "Número total: 7661",
+  "extraInfo_RO": "Número total: 12775",
+  "extraInfo_SE": "Número total: 115164",
+  "extraInfo_SI": "Número total: 1294",
+  "extraInfo_SK": "Número total: 1361",
+  "legend1": "No hay datos disponibles.",
+  "customUnitLabel": "por cada cien mil habitantes",
   "tooltipExtraInfoLabel": "haga clic aquí"
 }
