Update language file: mt

--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,13 +1,39 @@
 {
-  "title": "Liema pajjiżi tal-UE joffru l-aħjar prospetti ta' impjieg?",
-  "subtitle": "It-tkabbir futur fl-impjiegi f'dawn il-pajjiżi fl-2022-2035 huwa stmat għal 5.6%.",
+  "title": "Kemm huma komuni r-reati relatati mad-droga fl-UE?",
+  "subtitle": "Fl-2023, madwar 1.18 miljun ċittadin tal-UE kienu involuti f'attivitajiet illegali relatati mad-droga li jinvolvu prekursuri.",
   "textNoteDescription": "Nota",
-  "textNote": "sdchdc",
+  "textNote": "Numru totali ta' reati rreġistrati mill-pulizija ta' atti illegali li jinvolvu drogi kkontrollati jew prekursuri. Rapporti ta' reati kontra l-leġiżlazzjoni nazzjonali dwar id-droga (użu, pussess, traffikar, eċċ.) jirriflettu differenzi fil-liġi iżda wkoll il-modi differenti li bihom il-liġi tiġi infurzata u applikata, u l-prijoritajiet u r-riżorsi allokati għal problemi speċifiċi mill-aġenziji tal-ġustizzja kriminali.",
   "textSourceDescription": "Sors",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Aċċessa għad-data",
-  "extraInfo_DE": "Il-Ġermanja Tħaffef il-Ħruġ tal-Enerġija Rinnovabbli, Timmira 80% Enerġija Nadifa sal-2030",
-  "extraInfo_FR": "Il-Parlament Franċiż Japprova Abbozz ta' Liġi ta' Riforma Maġġuri fl-Immigrazzjoni Fost Protesti Nazzjonali",
+  "textSource": "L-Eurostat (2023)",
+  "linkDataAccessDescription": "Aċċessa d-dejta",
+  "extraInfo_AT": "Numru totali: 35737",
+  "extraInfo_BE": "Numru totali: 58915",
+  "extraInfo_BG": "Numru totali: 5691",
+  "extraInfo_CY": "Numru totali: 1094",
+  "extraInfo_CZ": "Numru totali: 4328",
+  "extraInfo_DE": "Numru totali: 346877",
+  "extraInfo_DK": "Numru totali: 29934",
+  "extraInfo_EE": "Numru totali: 3297",
+  "extraInfo_EL": "Numru totali: 12713",
+  "extraInfo_ES": "Numru totali: 21033",
+  "extraInfo_FI": "Numru totali: 26784",
+  "extraInfo_FR": "Numru totali: 346628",
+  "extraInfo_HR": "Numru totali: 10356",
+  "extraInfo_HU": "Numru totali: 6589",
+  "extraInfo_IE": "Numru totali: 16699",
+  "extraInfo_IT": "Numru totali: 30365",
+  "extraInfo_LT": "Numru totali: 3811",
+  "extraInfo_LU": "Numru totali: 3129",
+  "extraInfo_LV": "Numru totali: 1350",
+  "extraInfo_MT": "Numru totali: 200",
+  "extraInfo_NL": "Numru totali: 13580",
+  "extraInfo_PL": "Numru totali: 67346",
+  "extraInfo_PT": "Numru totali: 7661",
+  "extraInfo_RO": "Numru totali: 12775",
+  "extraInfo_SE": "Numru totali: 115164",
+  "extraInfo_SI": "Numru totali: 1294",
+  "extraInfo_SK": "Numru totali: 1361",
   "legend1": "L-ebda dejta disponibbli",
+  "customUnitLabel": "għal kull mitt elf abitant",
   "tooltipExtraInfoLabel": "Ikklikkja hawn"
 }
