Update language file: sv

--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,13 +1,39 @@
 {
-  "title": "Vilka EU-länder erbjuder de bästa sysselsättningsmöjligheterna?",
-  "subtitle": "Framtida sysselsättningstillväxt i dessa länder 2022-2035 beräknas till 5,6 %.",
+  "title": "Hur vanliga är narkotikarelaterade brott i EU?",
+  "subtitle": "År 2023 var cirka 1,18 miljoner EU-medborgare inblandade i illegal narkotikarelaterad verksamhet med prekursorer.",
   "textNoteDescription": "Notera",
-  "textNote": "sdchdc",
+  "textNote": "Totalt antal polisregistrerade brott mot olagliga handlingar som involverar kontrollerade droger eller prekursorer. Rapporter om brott mot nationell narkotikalagstiftning (användning, innehav, handel etc.) återspeglar skillnader i lagstiftning men också de olika sätt på vilka lagen upprätthålls och tillämpas, och de prioriteringar och resurser som tilldelas specifika problem av rättsväsende myndigheter.",
   "textSourceDescription": "Källa",
-  "textSource": "sdcshdc",
-  "linkDataAccessDescription": "Få åtkomst till data",
-  "extraInfo_DE": "Tyskland accelererar utbyggnaden av förnybar energi, siktar på 80 % ren kraft till 2030",
-  "extraInfo_FR": "Det franska parlamentet godkänner lagförslaget om stora invandringsreformer under rikstäckande protester",
+  "textSource": "Eurostat (2023)",
+  "linkDataAccessDescription": "Åtkomst till data",
+  "extraInfo_AT": "Totalt antal: 35737",
+  "extraInfo_BE": "Totalt antal: 58915",
+  "extraInfo_BG": "Totalt antal: 5691",
+  "extraInfo_CY": "Totalt antal: 1094",
+  "extraInfo_CZ": "Totalt antal: 4328",
+  "extraInfo_DE": "Totalt antal: 346877",
+  "extraInfo_DK": "Totalt antal: 29934",
+  "extraInfo_EE": "Totalt antal: 3297",
+  "extraInfo_EL": "Totalt antal: 12713",
+  "extraInfo_ES": "Totalt antal: 21033",
+  "extraInfo_FI": "Totalt antal: 26784",
+  "extraInfo_FR": "Totalt antal: 346628",
+  "extraInfo_HR": "Totalt antal: 10356",
+  "extraInfo_HU": "Totalt antal: 6589",
+  "extraInfo_IE": "Totalt antal: 16699",
+  "extraInfo_IT": "Totalt antal: 30365",
+  "extraInfo_LT": "Totalt antal: 3811",
+  "extraInfo_LU": "Totalt antal: 3129",
+  "extraInfo_LV": "Totalt antal: 1350",
+  "extraInfo_MT": "Totalt antal: 200",
+  "extraInfo_NL": "Totalt antal: 13580",
+  "extraInfo_PL": "Totalt antal: 67346",
+  "extraInfo_PT": "Totalt antal: 7661",
+  "extraInfo_RO": "Totalt antal: 12775",
+  "extraInfo_SE": "Totalt antal: 115164",
+  "extraInfo_SI": "Totalt antal: 1294",
+  "extraInfo_SK": "Totalt antal: 1361",
   "legend1": "Inga data tillgängliga",
+  "customUnitLabel": "per hundratusen invånare",
   "tooltipExtraInfoLabel": "Klicka här"
 }
