Update language file: sk

--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,13 +1,39 @@
 {
-  "title": "Ktoré krajiny EÚ ponúkajú najlepšie vyhliadky na zamestnanie?",
-  "subtitle": "Budúci rast zamestnanosti v týchto krajinách v rokoch 2022-2035 sa odhaduje na 5,6 %.",
+  "title": "Aké bežné sú trestné činy súvisiace s drogami v EÚ?",
+  "subtitle": "V roku 2023 bolo približne 1,18 milióna občanov EÚ zapojených do nelegálnych drogových aktivít zahŕňajúcich prekurzory.",
   "textNoteDescription": "Poznámka",
-  "textNote": "sdchdc",
+  "textNote": "Celkový počet policajne zaznamenaných trestných činov protiprávnych činov zahŕňajúcich kontrolované drogy alebo prekurzory. Správy o trestných činoch porušujúcich vnútroštátne právne predpisy o drogách (užívanie, držba, obchodovanie atď.) odrážajú rozdiely v právnych predpisoch, ale aj rôzne spôsoby, akými sa zákon presadzuje a uplatňuje, a priority a zdroje, ktoré orgány trestného súdnictva prideľujú na konkrétne problémy.",
   "textSourceDescription": "Zdroj",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Prístup k údajom",
-  "extraInfo_DE": "Nemecko urýchľuje zavádzanie energie z obnoviteľných zdrojov a do roku 2030 má za cieľ dosiahnuť 80 % čistej energie",
-  "extraInfo_FR": "Francúzsky parlament počas celonárodných protestov schválil návrh zákona o veľkej imigračnej reforme",
+  "extraInfo_AT": "Celkový počet: 35737",
+  "extraInfo_BE": "Celkový počet: 58915",
+  "extraInfo_BG": "Celkový počet: 5691",
+  "extraInfo_CY": "Celkový počet: 1094",
+  "extraInfo_CZ": "Celkový počet: 4328",
+  "extraInfo_DE": "Celkový počet: 346877",
+  "extraInfo_DK": "Celkový počet: 29934",
+  "extraInfo_EE": "Celkový počet: 3297",
+  "extraInfo_EL": "Celkový počet: 12713",
+  "extraInfo_ES": "Celkový počet: 21033",
+  "extraInfo_FI": "Celkový počet: 26784",
+  "extraInfo_FR": "Celkový počet: 346628",
+  "extraInfo_HR": "Celkový počet: 10356",
+  "extraInfo_HU": "Celkový počet: 6589",
+  "extraInfo_IE": "Celkový počet: 16699",
+  "extraInfo_IT": "Celkový počet: 30365",
+  "extraInfo_LT": "Celkový počet: 3811",
+  "extraInfo_LU": "Celkový počet: 3129",
+  "extraInfo_LV": "Celkový počet: 1350",
+  "extraInfo_MT": "Celkový počet: 200",
+  "extraInfo_NL": "Celkový počet: 13580",
+  "extraInfo_PL": "Celkový počet: 67346",
+  "extraInfo_PT": "Celkový počet: 7661",
+  "extraInfo_RO": "Celkový počet: 12775",
+  "extraInfo_SE": "Celkový počet: 115164",
+  "extraInfo_SI": "Celkový počet: 1294",
+  "extraInfo_SK": "Celkový počet: 1361",
   "legend1": "Nie sú k dispozícii žiadne údaje",
+  "customUnitLabel": "na stotisíc obyvateľov",
   "tooltipExtraInfoLabel": "Kliknite sem"
 }
