Update language file: sl

--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,13 +1,39 @@
 {
-  "title": "Katere države EU ponujajo najboljše zaposlitvene možnosti?",
-  "subtitle": "Prihodnja rast zaposlenosti v teh državah v letih 2022–2035 je ocenjena na 5,6 %.",
+  "title": "Kako pogosta so kazniva dejanja, povezana z drogami, v EU?",
+  "subtitle": "Leta 2023 je bilo približno 1,18 milijona državljanov EU vpletenih v nezakonite dejavnosti, povezane z drogami, ki vključujejo predhodne sestavine.",
   "textNoteDescription": "Opomba",
-  "textNote": "sdchdc",
+  "textNote": "Skupno število kaznivih dejanj nezakonitih dejanj, povezanih z nadzorovanimi drogami ali predhodnimi sestavinami, ki jih je zabeležila policija. Poročila o kaznivih dejanjih v nasprotju z nacionalno zakonodajo o drogah (uporaba, posedovanje, trgovina itd.) odražajo razlike v zakonodaji, pa tudi različne načine izvrševanja in uporabe zakonodaje ter prednostne naloge in vire, ki jih organi kazenskega pravosodja namenjajo posebnim problemom.",
   "textSourceDescription": "Vir",
-  "textSource": "sdcshdc",
+  "textSource": "Eurostat (2023)",
   "linkDataAccessDescription": "Dostop do podatkov",
-  "extraInfo_DE": "Nemčija pospešuje uvedbo obnovljive energije, cilj je 80 % čiste energije do leta 2030",
-  "extraInfo_FR": "Francoski parlament je med protesti po vsej državi potrdil predlog zakona o veliki reformi priseljevanja",
-  "legend1": "Ni podatkov",
+  "extraInfo_AT": "Skupno število: 35737",
+  "extraInfo_BE": "Skupno število: 58915",
+  "extraInfo_BG": "Skupno število: 5691",
+  "extraInfo_CY": "Skupno število: 1094",
+  "extraInfo_CZ": "Skupno število: 4328",
+  "extraInfo_DE": "Skupno število: 346877",
+  "extraInfo_DK": "Skupno število: 29934",
+  "extraInfo_EE": "Skupno število: 3297",
+  "extraInfo_EL": "Skupno število: 12713",
+  "extraInfo_ES": "Skupno število: 21033",
+  "extraInfo_FI": "Skupno število: 26784",
+  "extraInfo_FR": "Skupno število: 346628",
+  "extraInfo_HR": "Skupno število: 10356",
+  "extraInfo_HU": "Skupno število: 6589",
+  "extraInfo_IE": "Skupno število: 16699",
+  "extraInfo_IT": "Skupno število: 30365",
+  "extraInfo_LT": "Skupno število: 3811",
+  "extraInfo_LU": "Skupno število: 3129",
+  "extraInfo_LV": "Skupno število: 1350",
+  "extraInfo_MT": "Skupno število: 200",
+  "extraInfo_NL": "Skupno število: 13580",
+  "extraInfo_PL": "Skupno število: 67346",
+  "extraInfo_PT": "Skupno število: 7661",
+  "extraInfo_RO": "Skupno število: 12775",
+  "extraInfo_SE": "Skupno število: 115164",
+  "extraInfo_SI": "Skupno število: 1294",
+  "extraInfo_SK": "Skupno število: 1361",
+  "legend1": "Ni na voljo podatkov",
+  "customUnitLabel": "na sto tisoč prebivalcev",
   "tooltipExtraInfoLabel": "Kliknite tukaj"
 }
